add bootstrap to base template

--- a/recipebook/recipebook_web/templates/recipebook_web/index.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/index.html
@@ -1,3 +1,6 @@
-<p>This is the home page</p>
-{{ request.user.id }}
-{{ request.user.username }}
+{% extends "base.html" %}
+{% block content %}
+    <p>This is the home page</p>
+    {{ request.user.id }}
+    {{ request.user.username }}
+{% endblock %}
