--- a/recipebook/recipebook_web/templates/base.html
+++ b/recipebook/recipebook_web/templates/base.html
@@ -26,13 +26,11 @@
                 </li>
             </ul>
         </nav>
-        <div class="row">
-            <div class="col s12 m4 l3">
-                <!-- Grey navigation panel -->
-            </div>
-
-            <div class="col s12 m8 l9">
-                {% block content %}{% endblock %}
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    {% block content %}{% endblock %}
+                </div>
             </div>
         </div>
 
