rendering as unordered list

--- a/recipebook/recipebook_web/templates/recipebook_web/index.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/index.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p>This is the home page</p>
-    {{ request.user.id }}
-    {{ request.user.username }}
+    <h2>This is the main page</h2>
 {% endblock %}
