--- a/recipebook/recipebook_web/templates/base.html
+++ b/recipebook/recipebook_web/templates/base.html
@@ -26,9 +26,12 @@
                 </li>
             </ul>
         </nav>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-3">
+
+                </div>
+                <div class="col-sm-9">
                     {% block content %}{% endblock %}
                 </div>
             </div>
