--- a/recipebook/templates/registration/login.html
+++ b/recipebook/templates/registration/login.html
@@ -1,10 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
+    {% if request.user.is_authenticated %}
+        <p>You are already logged in!</p>
+    {% else %}
+        <h2>Login</h2>
+        {% if form.errors %}
+            <p>Your username and password didn't match. Please try again.</p>
+        {% endif %}
+
+        <form method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="id_username" type="text" name="username" />
+                    <label for="id_username">{{ form.username.label }}</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="id_password" type="password" name="password" />
+                    <label for="id_password">{{ form.password.label }}</label>
+                </div>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit">
+                Login
+            </button>
+        </form>
+        <p>Don't have an account?  <a href="{% url 'signup' %}">Signup</a></p>
+    {% endif %}
 {% endblock %}
