--- a/recipebook/accounts/templates/accounts/signup.html
+++ b/recipebook/accounts/templates/accounts/signup.html
@@ -1,24 +1,61 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Sign Up</h2>
-    <form method="post">
-        {% csrf_token %}
+    {% if request.user.is_authenticated %}
+        <p>You are already logged in!</p>
+    {% else %}
+        <h2>Sign Up</h2>
+        <form method="post">
+            {% csrf_token %}
 
-        <p>{{ form.username.label_tag }} {{ form.username }}</p>
-        {% if form.username.errors %}
-            {{ form.username.errors }}
-        {% endif %}
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="id_username" type="text" name="username" />
+                    <label for="id_username">{{ form.username.label }}</label>
+                </div>
+            </div>
 
-        <p>{{ form.password1.label_tag }} {{ form.password1 }}</p>
-        {% if form.password1.errors %}
-            {{ form.password1.errors }}
-        {% endif %}
+            {% if form.username.errors %}
+                <div class="row">
+                    <div class="col s12" style="color: red;">
+                        {{ form.username.errors }}
+                    </div>
+                </div>
+            {% endif %}
 
-        <p>{{ form.password2.label_tag }} {{ form.password2 }}</p>
-        {% if form.password2.errors %}
-            {{ form.password2.errors }}
-        {% endif %}
-        <button type="submit">Sign Up</button>
-    </form>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="id_password1" type="password" name="password1" />
+                    <label for="id_password1">{{ form.password1.label }}</label>
+                </div>
+            </div>
+            
+            {% if form.password1.errors %}
+                <div class="row">
+                    <div class="col s12" style="color: red;">
+                        {{ form.password1.errors }}
+                    </div>
+                </div>
+            {% endif %}
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="id_password2" type="password" name="password2" />
+                    <label for="id_password2">{{ form.password2.label }}</label>
+                </div>
+            </div>
+
+            {% if form.password2.errors %}
+                <div class="row">
+                    <div class="col s12" style="color: red;">
+                        {{ form.password2.errors }}
+                    </div>
+                </div>
+            {% endif %}
+
+            <button class="btn waves-effect waves-light" type="submit">
+                Sign Up
+            </button>
+        </form>
+    {% endif %}
 {% endblock %}
