--- a/recipebook/templates/registration/login.html
+++ b/recipebook/templates/registration/login.html
@@ -6,7 +6,7 @@
     {% else %}
         <h2>Login</h2>
         {% if form.errors %}
-            <p>Your username and password didn't match. Please try again.</p>
+            <p style="color: red;">Your username and password didn't match. Please try again.</p>
         {% endif %}
 
         <form method="post">
