--- a/recipebook/recipebook_web/templates/recipebook_web/index.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/index.html
@@ -26,7 +26,7 @@
     <br />
     <div class="row">
         <div class="col s12">
-            <a class="waves-effect waves-light btn">Add A Category</a>
+            <a class="waves-effect waves-light btn" href="{% url 'category-create' %}">Add A Category</a>
             <a class="waves-effect waves-light btn">Add A Recipe</a>
         </div>
     </div>
