configure everything to get ready to draw create form

--- a/recipebook/recipebook_web/templates/recipebook_web/index.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/index.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col s12">
             <a class="waves-effect waves-light btn" href="{% url 'category-create' %}">Add A Category</a>
-            <a class="waves-effect waves-light btn">Add A Recipe</a>
+            <a class="waves-effect waves-light btn" href="{% url 'recipe-create' %}">Add A Recipe</a>
         </div>
     </div>
 {% endblock %}
