can add a recipe

--- a/recipebook/recipebook_web/templates/recipebook_web/category_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_form.html
@@ -5,7 +5,11 @@
         {% csrf_token %}
 
         {% if form.errors %}
-            {{ form.errors }}
+            <div class="row">
+                <div class="col s12" style="color: red;">
+                    {{ form.errors }}
+                </div>
+            </div>
         {% endif %}
         
         <div class="row">
@@ -16,7 +20,7 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <select>
+                <select id="id_subcategory">
                     {% for value, name in form.subcategory.field.choices %}
                         <option value="{{value}}">{{ name }}</option>
                     {% endfor %}
