--- a/recipebook/recipebook_web/templates/recipebook_web/recipe_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/recipe_form.html
@@ -1,5 +1,73 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>This is where you will add the recipes</h2>
+    <h2>Add a recipe</h2>
+    <form method="post">
+        {% csrf_token %}
+
+        {% if form.errors %}
+            <div class="row">
+                <div class="col s12" style="color: red;">
+                    {{ form.errors }}
+                </div>
+            </div>
+        {% endif %}
+
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="id_name" type="text" name="name" />
+                <label for="id_name">{{ form.name.label }}</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="id_found" type="text" name="found" />
+                <label for="id_found">{{ form.found.label }}</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <select id="id_category" name="category">
+                    {% for value, name in form.category.field.choices %}
+                        <option value="{{ value }}">{{ name }}</option>
+                    {% endfor %}
+                </select>
+                <label for="id_category">{{ form.category.label }}</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <textarea id="id_ingredients" class="materialize-textarea" name="ingredients"></textarea>
+                <label for="id_ingredients">{{ form.ingredients.label }}</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <textarea id="id_recipe" class="materialize-textarea" name="recipe"></textarea>
+                <label for="id_recipe">{{ form.recipe.label }}</label>
+            </div>
+        </div>
+
+        <button class="btn waves-effect waves-light" type="submit">
+            Add Recipe
+        </button>
+    </form>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var elems = document.querySelectorAll('select');
+            var instances = M.FormSelect.init(elems, {});
+        });
+    </script>
 {% endblock %}
+
+<div class="row">
+    <div class="input-field col s12">
+      <textarea id="textarea1" class="materialize-textarea"></textarea>
+      <label for="textarea1">Textarea</label>
+    </div>
+  </div>
