draw a table of the categories

--- a/recipebook/recipebook_web/templates/recipebook_web/category_list.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_list.html
@@ -1,28 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% if not category_list %}
-        <p>You do not have any recipe categories, lets add some</p>
-    {% else %}
-        <ul class="list-group">
+    <table>
+        <thead class="highlight">
+            <tr>
+                <th>Name</th>
+                <th>Subcategory</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
             {% for category in category_list %}
-                <li class="list-group-item">
-                    <button class="btn btn-link" data-toggle="collapse" data-target="{{ category.get_collapse_target }}">
-                        {{ category.name }}
-                    </button>
-                </li>
-                {% if category.subcategories %}
-                    <div id="{{ category.get_collapse_target }}" class="collapse">
-                        <ul class="list-group">
-                            {% for subcategory in category.subcategories.all %}
-                                <li class="list-group-item offset-1">
-                                    {{ subcategory.name }}
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                {% endif %}
+                <tr>
+                    <td>{{ category.name }}</td>
+                    <td>{{ category.subcategory }}</td>
+                    <td>Edit Delete</td>
+                </tr>
             {% endfor %}
-        </ul>
-    {% endif %}
+        </tbody>
+    </table>
 {% endblock %}
