--- a/recipebook/recipebook_web/templates/recipebook_web/index.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/index.html
@@ -27,7 +27,15 @@
     <div class="row">
         <div class="col s12">
             <a class="waves-effect waves-light btn" href="{% url 'category-create' %}">Add A Category</a>
+            <a class="waves-effect waves-light btn" href="{% url 'category-list' %}">Edit Categories</a>
+        </div>
+    </div>
+    <br />
+    <br />
+    <div class="row">
+        <div class="col s12">
             <a class="waves-effect waves-light btn" href="{% url 'recipe-create' %}">Add A Recipe</a>
+            <a class="waves-effect waves-light btn">Edit Recipes</a>
         </div>
     </div>
 {% endblock %}
