--- a/recipebook/recipebook_web/templates/recipebook_web/category_list.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_list.html
@@ -14,7 +14,7 @@
                 <tr>
                     <td>{{ category.name }}</td>
                     <td>{{ category.subcategory }}</td>
-                    <td><a href="{% url 'category-update' pk=category.id %}">Edit</a> Delete</td>
+                    <td><a href="{% url 'category-update' pk=category.id %}">Edit</a> <a href="{% url 'category-delete' pk=category.id %}">Delete</a></td>
                 </tr>
             {% endfor %}
         </tbody>
