--- a/recipebook/recipebook_web/templates/recipebook_web/category_confirm_delete.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_confirm_delete.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h2>Deleting {{ object.name }}</h2>
+
     <form method="post">
         {% csrf_token %}
         
