--- a/recipebook/recipebook_web/templates/recipebook_web/category_create_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_create_form.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h2>Add a new category</h2>
+
     <form method="post">
         {% csrf_token %}
 
