--- a/recipebook/recipebook_web/templates/recipebook_web/category_list.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h2>Your created categories</h2>
+
     <table>
         <thead class="highlight">
             <tr>
