--- a/recipebook/recipebook_web/templates/recipebook_web/category_update_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_update_form.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h2>Updating {{ form.name.value }}</h2>
+    <br />
+
     <form method="post">
         {% csrf_token %}
 
