--- a/recipebook/recipebook_web/templates/recipebook_web/recipe_detail.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/recipe_detail.html
@@ -9,4 +9,6 @@
     <p>{{ recipe.ingredients }}</p>
     <h3>Recipe</h3>
     <p>{{ recipe.recipe }}</p>
+
+    <a class="btn waves-effect waves-light" href="{% url 'recipe-update' pk=recipe.id %}">Edit</a>
 {% endblock %}
