move the dropdown script to snippet

--- a/recipebook/recipebook_web/templates/recipebook_web/category_create_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_create_form.html
@@ -36,10 +36,5 @@
         </button>
     </form>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var elems = document.querySelectorAll('select');
-            var instances = M.FormSelect.init(elems, {});
-        });
-    </script>
+    {% include "dropdown_snippet.html" %}
 {% endblock %}
