--- a/recipebook/recipebook_web/templates/recipebook_web/recipe_create_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/recipe_create_form.html
@@ -58,17 +58,5 @@
         </button>
     </form>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var elems = document.querySelectorAll('select');
-            var instances = M.FormSelect.init(elems, {});
-        });
-    </script>
+    {% include "dropdown_snippet.html" %}
 {% endblock %}
-
-<div class="row">
-    <div class="input-field col s12">
-      <textarea id="textarea1" class="materialize-textarea"></textarea>
-      <label for="textarea1">Textarea</label>
-    </div>
-  </div>
