--- a/recipebook/recipebook_web/templates/recipebook_web/recipe_update_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/recipe_update_form.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>This is where you will change the recipe</h2>
+    <h2>Editing {{ recipe.name }}</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+    </form>
+
+    {% include "dropdown_snippet.html" %}
 {% endblock %}
