--- a/recipebook/recipebook_web/templates/recipebook_web/recipe_list.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/recipe_list.html
@@ -18,6 +18,7 @@
                     <td>{{ recipe.found }}</td>
                     <td>
                         <a href="{% url 'recipe-detail' recipe.id %}">View</a>
+                        <a href="{% url 'recipe-delete' recipe.id %}">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
