restrict viewing of data

--- a/recipebook/recipebook_web/templates/recipebook_web/category_update_form.html
+++ b/recipebook/recipebook_web/templates/recipebook_web/category_update_form.html
@@ -1,38 +1,42 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Updating {{ form.name.value }}</h2>
-    <br />
+    {% if request.user.is_authenticated and request.user == category.owner %}
+        <h2>Updating {{ form.name.value }}</h2>
+        <br />
 
-    <form method="post">
-        {% csrf_token %}
+        <form method="post">
+            {% csrf_token %}
 
-        {% if form.errors %}
+            {% if form.errors %}
+                <div class="row">
+                    <div class="col s12" style="color: red;">
+                        {{ form.errors }}
+                    </div>
+                </div>
+            {% endif %}
+
             <div class="row">
-                <div class="col s12" style="color: red;">
-                    {{ form.errors }}
+                <div class="input-field col s12">
+                    <input id="id_name" type="text" name="name" value="{{ form.name.value }}" />
+                    <label for="id_name">{{ form.name.label }}</label>
                 </div>
             </div>
-        {% endif %}
 
-        <div class="row">
-            <div class="input-field col s12">
-                <input id="id_name" type="text" name="name" value="{{ form.name.value }}" />
-                <label for="id_name">{{ form.name.label }}</label>
+            <div class="row">
+                <div class="input-field col s12">
+                    {{ form.subcategory }}
+                    <label for="id_subcategory">{{ form.subcategory.label }}</label>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="input-field col s12">
-                {{ form.subcategory }}
-                <label for="id_subcategory">{{ form.subcategory.label }}</label>
-            </div>
-        </div>
+            <button class="btn waves-effect waves-light" type="submit">
+                Update
+            </button>
+        </form>
 
-        <button class="btn waves-effect waves-light" type="submit">
-            Update
-        </button>
-    </form>
-
-    {% include "dropdown_snippet.html" %}
+        {% include "dropdown_snippet.html" %}
+    {% else %}
+        <p>You do not have permissions to update this category.</p>
+    {% endif %}
 {% endblock %}
